--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,8 @@
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -15,7 +17,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.sreesharp.instagramviewer.PhotoActivity"
-            android:label="@string/app_name" >
+            android:label="@string/popular_photos_caption" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
